[gd_scene load_steps=5 format=3 uid="uid://dm8vni40rm7ug"]

[ext_resource type="Script" path="res://scenes/options_menu/options_menu.gd" id="1_udhl2"]
[ext_resource type="Shader" path="res://materials/tiling_shader.gdshader" id="2_8oavp"]
[ext_resource type="Texture2D" uid="uid://c031a0c5v45ux" path="res://textures/tiledBlueBackground.png" id="3_pyv0h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ab2f"]
shader = ExtResource("2_8oavp")

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("1_udhl2")

[node name="OptionsLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="OptionsMenu" type="CenterContainer" parent="OptionsLayer"]
auto_translate_mode = 1
offset_left = 567.0
offset_top = 328.0
offset_right = 912.0
offset_bottom = 763.0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsLayer/OptionsMenu"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 80

[node name="Title" type="MarginContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="TitleLabel" type="Label" parent="OptionsLayer/OptionsMenu/VBoxContainer/Title"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Options Menu"

[node name="MenuButtonContainer" type="VBoxContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="CenterContainer5" type="CenterContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer5"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 1
text = "Master Volume"

[node name="CenterContainer" type="CenterContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="master_volume" type="HSlider" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
tick_count = 20

[node name="CenterContainer2" type="CenterContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Label" type="Label" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer2"]
auto_translate_mode = 1
show_behind_parent = true
layout_mode = 2
mouse_filter = 1
text = "Music Volume"

[node name="CenterContainer3" type="CenterContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="music_volume" type="HSlider" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer3"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
tick_count = 20

[node name="CenterContainer6" type="CenterContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Label" type="Label" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer6"]
auto_translate_mode = 1
show_behind_parent = true
layout_mode = 2
mouse_filter = 1
text = "Sound Effect Volume"

[node name="CenterContainer7" type="CenterContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="sfx_volume" type="HSlider" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer7"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
tick_count = 20

[node name="CenterContainer4" type="CenterContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="MuteButton" type="Button" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer4"]
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Mute Everything"

[node name="CenterContainer8" type="CenterContainer" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="ReturnButton" type="Button" parent="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer8"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Return"

[node name="Background" type="TextureRect" parent="."]
auto_translate_mode = 1
material = SubResource("ShaderMaterial_4ab2f")
offset_right = 1440.0
offset_bottom = 1080.0
texture = ExtResource("3_pyv0h")
expand_mode = 1
stretch_mode = 1

[connection signal="value_changed" from="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer/master_volume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer3/music_volume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer7/sfx_volume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="pressed" from="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer4/MuteButton" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="OptionsLayer/OptionsMenu/VBoxContainer/MenuButtonContainer/CenterContainer8/ReturnButton" to="." method="_on_return_button_pressed"]
